src/tests/fixtures/field_definitions/FieldAsStaticClassMethodOnNonDefaultExportUnnamedNonGqlClass.invalid.ts.expected
-----------------
INPUT
----------------- 
export class {
  /** @gqlField */
  static greet(_: Query): string {
    return "Hello, world!";
  }
}

/** @gqlType */
type Query = unknown;

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/FieldAsStaticClassMethodOnNonDefaultExportUnnamedNonGqlClass.invalid.ts:1:1 - error: Expected `@gqlField` static method's class to be named if exported without the `default` keyword.

  1 export class {
    ~~~~~~~~~~~~~~
  2   /** @gqlField */
    ~~~~~~~~~~~~~~~~~~
... 
  5   }
    ~~~
  6 }
    ~
